--- a/docs/src/assets/custom.css
+++ b/docs/src/assets/custom.css
@@ -1,3 +1,3 @@
-article {
-    max-width: 55em;
-}
+@media screen and (min-width: 1056px) {
+    #documenter .docs-main {
+      max-width: 60rem; } }
